<resources>
    <string name="app_name">My Baby and I</string>
    <string name="action_settings">Settings</string>
    <string name="mytimer_view">00:00:00</string>
    <string name="growth_item">GROWTH</string>
    <string name="feeding_item">FEEDING</string>
    <string name="add_item">Add Item</string>
    <string name="hint_date">DATE</string>
    <string name="hint_weight">WEIGHT</string>
    <string name="hint_time">TIME</string>
    <string name="hint_volume">VOLUME</string>
    <string name="hint_note">Note</string>
    <string name="hint_HIEGHT">HEIGHT</string>
    <string name="save_button">Save</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">no</string>
    <string name="yes_text">yes</string>
    <string name="edit_time">Edit Item</string>
    <string name="update_text">Update</string>
    <string name="turnonalarm">Alarm on</string>
    <string name="turn_off_alarm">Alarm off</string>
    <string name="did_you_set_the_alarm">Did you set the Alarm</string>
    <string name="BabysDetails">Baby\'s Detail</string>
    <string name="baby_name">Baby name</string>
    <string name="baby_birthday">Baby Birthday</string>
    <string-array name="gender_array">
        <item>Boy</item>
        <item>Girl</item>
    </string-array>
    <string name="My_continue">Continue</string>
    <string name="send_your_feedback_here1">Send Your Feedback</string>
    <string name="compose_email">compose</string>
    <string name="my_baby_and_i">Your feedback is important to us</string>
    <string name="send_your_feedback1_here">Send Your Feedback</string>
</resources>
