<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutnew_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/growth_item"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/babyItemnew"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:inputType="date"
                android:hint="@string/hint_date"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/itemQuantitynew"
                android:inputType="number"
                android:layout_below="@id/babyItemnew"
                android:layout_width="match_parent"
                android:hint="@string/hint_weight"
                android:layout_height="wrap_content" />



            <EditText
                android:id="@+id/itemSizenew"
                android:layout_below="@id/itemQuantitynew"
                android:inputType="number"
                android:layout_width="match_parent"
                android:hint="@string/hint_HIEGHT"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/saveButton"
                android:layout_below="@id/itemSizenew"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>