<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAlarmActivity">

    <TimePicker
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/start_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/turnonalarm"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/end_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignRight="@id/timer"
        android:layout_alignEnd="@id/timer"

        android:text="@string/turn_off_alarm"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/update_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/timer"
        android:text="@string/did_you_set_the_alarm"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

</RelativeLayout>